first training run results

--- a/img_classification_instruments.ipynb
+++ b/img_classification_instruments.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "ca187e0c-b75f-4bfb-bc20-7869e7ab4d1a",
    "metadata": {
     "tags": []
@@ -14,8 +14,8 @@
     "import pandas as pd\n",
     "import datasets \n",
     "from datasets import Features, Image, load_dataset, load_dataset_builder, config, concatenate_datasets\n",
-    "# import matplotlib.pyplot as plt\n",
-    "# import os\n",
+    "import matplotlib.pyplot as plt\n",
+    "import os\n",
     "# import shutil\n",
     "# import pathlib\n",
     "# import PIL\n",
@@ -34,47 +34,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "0d0924a0-b4e9-4375-9897-2d6870819604",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d984c208b40248859c9709751410e055",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Resolving data files:   0%|          | 0/1000 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# get data (from https://huggingface.co/datasets/YakupAkdin/instrument-images/tree/main)\n",
-    "dataset = load_dataset(\"YakupAkdin/instrument-images\", split='train').with_format(\"torch\")"
+    "dataset = load_dataset(\"YakupAkdin/instrument-images\", split='train').with_format(\"torch\")\n",
+    "\n",
+    "label_values = {\n",
+    "    0: 'harp',\n",
+    "    1: 'baglama',\n",
+    "    2: 'electric guitar',\n",
+    "    3: 'acoustic guitar',\n",
+    "    4: 'kanun',\n",
+    "    5: 'violin',\n",
+    "    6: 'kemence',\n",
+    "    7: 'mandolin',\n",
+    "    8: 'oud',\n",
+    "    9: 'yayli tambur'}\n",
+    "\n",
+    "inverted_labels = {v: k for k, v in label_values.items()}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "67514ad2-0eb1-46ef-a69e-39013c33f034",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "989"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "dataset_RGB = dataset.filter(lambda x: x['image'].dim() == 3)\n",
     "len(dataset_RGB)"
@@ -82,31 +70,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "e989a50e-88f7-4a13-94c1-6bc23b14ae1a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "torch.Size([720, 1280, 3])\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "torch.Size([3, 720, 1280])"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# the RGB images are [H,W,3] and PyTorch needs them as [3,H,W]\n",
-    "# including [:3, :, :] to adjust any RGBA images to RGB\n",
+    "# included [:3, :, :] slice to adjust any RGBA images to RGB\n",
     "print(dataset_RGB[0]['image'].shape)\n",
     "\n",
     "# permute the tensors\n",
@@ -122,21 +92,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "b8cf5c48-7f8d-4cc1-a50a-a4af909037be",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "11"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "dataset_greyscale = dataset.filter(lambda x: x['image'].dim() == 2)\n",
     "len(dataset_greyscale)"
@@ -144,19 +103,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "2dab59e8-c1fb-44ea-b8c2-ab04fbb48e80",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "torch.Size([849, 900])\n",
-      "torch.Size([3, 849, 900])\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# some of the images are greyscale, so we convert to RGB as well\n",
     "print(dataset_greyscale[0]['image'].shape)\n",
@@ -171,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "7d94e543-a904-42e5-904e-dc32b37e3ec8",
    "metadata": {},
    "outputs": [],
@@ -182,20 +132,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "74d2659d-c27f-486e-b617-b48174a1254a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sample values: tensor([40, 39, 41, 41, 41, 44, 48, 53, 54, 52])\n",
-      "Max value: 255\n",
-      "Min value: 0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# confirming 0-255 scaling of image tensors\n",
     "sample_image = dataset[0]['image']\n",
@@ -207,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "fa100f3a-a360-41a1-9d56-b2c92d479c88",
    "metadata": {},
    "outputs": [],
@@ -243,39 +183,107 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "99caa3fb-9fcc-4f82-8f3c-1b07375b7be0",
+   "cell_type": "markdown",
+   "id": "8fbdbf51-519a-4177-a8a3-d081954e50fa",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sample values: tensor([-0.7207, -0.7665, -0.5314, -0.7465, -0.6850, -0.7010, -0.4317, -0.4633,\n",
-      "        -0.1801, -0.5389])\n",
-      "Max value: 0.8591049909591675\n",
-      "Min value: -0.8577016592025757\n"
-     ]
-    }
-   ],
    "source": [
-    "# checking the first image tensor\n",
-    "sample_image = dataset[0]['image']\n",
-    "print(\"Sample values:\", sample_image.flatten()[:10])\n",
-    "print(\"Max value:\", sample_image.max().item())\n",
-    "print(\"Min value:\", sample_image.min().item())"
+    "### Examine Dataset/Model Compatibility Before Training"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "f49d3032-22bc-4077-914e-42f51392867f",
+   "execution_count": null,
+   "id": "99caa3fb-9fcc-4f82-8f3c-1b07375b7be0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# split test/train\n",
-    "dataset = dataset.train_test_split(test_size=0.2, seed=1, stratify_by_column=\"label\")"
+    "# are tensor values normalized to [-1, 1]?\n",
+    "\n",
+    "correct_tensor_range = 0\n",
+    "\n",
+    "for i, image in enumerate(dataset['image']):\n",
+    "    if image.min() < -1 or image.max() > 1:\n",
+    "        print(f\"Image at index {i} has values outside expected range: min={image.min()}, max={image.max()}\")\n",
+    "    else:\n",
+    "        correct_tensor_range += 1\n",
+    "\n",
+    "print(correct_tensor_range)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c8cc3ee7-862d-4a85-888f-013c37ce9ef7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# are all tensors shape [3, 32, 32]?\n",
+    "\n",
+    "correct_tensor_shape = 0\n",
+    "\n",
+    "for i in range(len(dataset)):\n",
+    "    if dataset[i]['image'].shape != torch.Size([3, 32, 32]):  # replace with expected shape\n",
+    "        print(f\"Image at index {i} has incorrect shape: {image.shape}\")\n",
+    "    else:\n",
+    "        correct_tensor_shape += 1\n",
+    "\n",
+    "print(correct_tensor_shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c4e6319b-746d-455e-882e-b95622d1ffb6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# checking images and labels for consistency\n",
+    "def imshow(img):\n",
+    "    img = img / 2 + 0.5     # unnormalize\n",
+    "    npimg = img.numpy()\n",
+    "    plt.imshow(np.transpose(npimg, (1, 2, 0)))\n",
+    "    plt.show()\n",
+    "\n",
+    "# get some random training images\n",
+    "def check_instrument(instr, ds):\n",
+    "\n",
+    "    check = ds.filter(lambda x: x['label'] == instr)\n",
+    "    images = check['image'][0:32]\n",
+    "    labels = check['label'][0:32]\n",
+    "\n",
+    "    # show images & labels\n",
+    "    imshow(torchvision.utils.make_grid(images))\n",
+    "\n",
+    "    label_list = ''\n",
+    "    for i, lbl in enumerate(labels):\n",
+    "        label_list += label_values[labels[i].item()]\n",
+    "        if i % 8 == 7:\n",
+    "            label_list += '\\n'\n",
+    "        else:\n",
+    "            label_list += ' | '\n",
+    "    print(label_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dae88ab1-bcb8-42b7-ab5e-05614d519a84",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# should be all violins\n",
+    "check_instrument(5, dataset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ba851469-dd1e-4299-9b68-196b23887ee4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# should be all electric guitars\n",
+    "check_instrument(2, dataset)"
    ]
   },
   {
@@ -314,52 +322,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "2d3bd9e7-ddc6-4734-a1df-fcd80b0c4a53",
+   "execution_count": null,
+   "id": "359e9dd6-6b9d-405f-b0be-98ec9a7c06e5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "class HF_to_PyTorch(Dataset):\n",
-    "    def __init__(self, huggingface_dataset):\n",
-    "        self.huggingface_dataset = huggingface_dataset\n",
-    "\n",
-    "    def __len__(self):\n",
-    "        return len(self.huggingface_dataset)\n",
-    "\n",
-    "    def __getitem__(self, idx):\n",
-    "        # Assuming each item is a dictionary with 'image' and 'label' keys\n",
-    "        item = self.huggingface_dataset[idx]\n",
-    "        image = item['image']\n",
-    "        label = item['label']\n",
-    "        return image, label\n",
-    "\n",
-    "train_dataset = HF_to_PyTorch(dataset['train'])"
+    "# split test/train\n",
+    "dataset = dataset.train_test_split(test_size=0.2, seed=1, stratify_by_column=\"label\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "17d5662d-0f2f-4019-ba1c-48cd83d2daa0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "trainloader = DataLoader(train_dataset, batch_size=80, shuffle=True, num_workers=2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "51f7075d-b5e8-4ec2-a104-822b79a128e2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# trainloader = DataLoader(dataset['train'], batch_size=64, shuffle=True)\n",
-    "# testloader = DataLoader(dataset['test'], batch_size=4, shuffle=True)"
+    "batch_size = 4\n",
+    "\n",
+    "trainloader = DataLoader(dataset['train'], batch_size=batch_size, shuffle=True, num_workers=2)\n",
+    "testloader = DataLoader(dataset['test'], batch_size=batch_size, shuffle=True, num_workers=2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
+   "id": "d71bb018-1bbc-4cb7-9f12-37a77a0be7fa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# check batch sizing (should be no output)\n",
+    "for batch in trainloader:\n",
+    "    if batch['image'].shape[0] != batch_size:\n",
+    "        print(f\"Batch {i} has incorrect batch size: {images.shape[0]}\")\n",
+    "    if batch['label'].shape[0] != batch_size:\n",
+    "        print(f\"Batch {i} has mismatched images and labels\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "5e0b4194-c2c2-43d8-a996-bb1e73f682bb",
    "metadata": {},
    "outputs": [],
@@ -390,12 +392,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "63daa908-5f77-483e-995a-6c536f1c9244",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# define loss function: Classification Cross-Entropy loss and SGD with momentum.\n",
+    "# Define loss function: Classification Cross-Entropy loss and SGD with momentum.\n",
     "\n",
     "criterion = nn.CrossEntropyLoss()\n",
     "optimizer = optim.SGD(net.parameters(), lr=0.001, momentum=0.9)"
@@ -403,46 +405,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "id": "bde8f251-aef4-482d-a6d6-e0fd440deca7",
+   "execution_count": null,
+   "id": "d08d4928-117c-48a8-8044-0eecd2d92a15",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1,     1] loss: 0.001\n",
-      "[1,     2] loss: 0.001\n",
-      "[1,     3] loss: 0.001\n",
-      "[1,     4] loss: 0.001\n",
-      "[1,     5] loss: 0.001\n",
-      "[1,     6] loss: 0.001\n",
-      "[1,     7] loss: 0.001\n",
-      "[1,     8] loss: 0.001\n",
-      "[1,     9] loss: 0.001\n",
-      "[1,    10] loss: 0.001\n",
-      "[2,     1] loss: 0.001\n",
-      "[2,     2] loss: 0.001\n",
-      "[2,     3] loss: 0.001\n",
-      "[2,     4] loss: 0.001\n",
-      "[2,     5] loss: 0.001\n",
-      "[2,     6] loss: 0.001\n",
-      "[2,     7] loss: 0.001\n",
-      "[2,     8] loss: 0.001\n",
-      "[2,     9] loss: 0.001\n",
-      "[2,    10] loss: 0.001\n",
-      "Finished Training\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "for epoch in range(2):  # loop over the dataset multiple times\n",
+    "for epoch in range(25):  # loop over the dataset multiple times\n",
     "\n",
     "    running_loss = 0.0\n",
     "    for i, data in enumerate(trainloader, 0):\n",
-    "        # get the inputs; data is a list of [inputs, labels]\n",
-    "        inputs, labels = data\n",
-    "\n",
+    "        inputs = data['image']\n",
+    "        labels = data['label']\n",
+    "        \n",
     "        # zero the parameter gradients\n",
     "        optimizer.zero_grad()\n",
     "\n",
@@ -454,11 +428,104 @@
     "\n",
     "        # print statistics\n",
     "        running_loss += loss.item()\n",
-    "        # if i % 2000 == 1999:    # print every 2000 mini-batches\n",
-    "        print(f'[{epoch + 1}, {i + 1:5d}] loss: {running_loss / 2000:.3f}')\n",
-    "        running_loss = 0.0\n",
+    "        if i % 200 == 199:    # print every 200 mini-batches\n",
+    "            print(f'[{epoch + 1}, {i + 1:5d}] loss: {running_loss / 200:.3f}')\n",
+    "            running_loss = 0.0\n",
     "\n",
     "print('Finished Training')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e602dbdb-7db0-4885-b83f-07afd6e62716",
+   "metadata": {},
+   "source": [
+    "### Saving and Testing the Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bc46fc1c-861f-4b6f-a36d-489a8b1a4e5d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # save the locally-trained model in current working directory\n",
+    "pwd = os.getcwd()\n",
+    "filename = 'model v001.pth'\n",
+    "path = os.path.join(pwd, filename)\n",
+    "torch.save(net.state_dict(), path)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b5fec3a6-dcf1-4383-98d7-202bd8f28611",
+   "metadata": {},
+   "source": [
+    "### Check Model Performance on Test Dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1cfb0f83-49a5-4c21-98ac-8e06c45e58ea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# in case we need to load model later\n",
+    "# pwd = os.getcwd()\n",
+    "# filename = 'model v001.pth'\n",
+    "# path = os.path.join(pwd, filename)\n",
+    "# net.load_state_dict(torch.load(path))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "609847e2-489d-46f1-ab4a-9aa86a798929",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## testing a batch of images\n",
+    "\n",
+    "# iterate through the dataset\n",
+    "dataiter = iter(testloader)\n",
+    "batch = next(dataiter)\n",
+    "images = batch['image']\n",
+    "labels = batch['label']\n",
+    "\n",
+    "# print some test imagery and labels\n",
+    "imshow(torchvision.utils.make_grid(images))\n",
+    "actual = [label_values[labels[i].item()] for i in range(4)]\n",
+    "print('actual: '+', '.join(actual))\n",
+    "\n",
+    "# test the model output on these images\n",
+    "outputs = net(images)\n",
+    "predicted = [label_values[i.item()] for i in torch.max(outputs, 1)[1]]\n",
+    "print('predicted: '+', '.join(predicted))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b6cf614a-0459-4d78-9ec6-0c1d90cb29fb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# calculate accuracy\n",
+    "correct = 0\n",
+    "total = 0\n",
+    "\n",
+    "for data in testloader:\n",
+    "    images = data['image']\n",
+    "    labels = data['label']\n",
+    "\n",
+    "    prediction = net(images)\n",
+    "    predicted = torch.max(prediction, 1)[1]\n",
+    "    total += labels.size(0)\n",
+    "    correct += (predicted == labels).sum().item()\n",
+    "\n",
+    "print(f'{correct} of {total} images categorized correctly: {100 * correct // total} %')"
    ]
   }
  ],
