--- a/img_classification_instruments.ipynb
+++ b/img_classification_instruments.ipynb
@@ -736,7 +736,9 @@
    "id": "aeea3c31-5606-4fc8-a40b-f93a54377de0",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "git "
+   ]
   }
  ],
  "metadata": {
