new notebook for pretrained model

--- a/img_classification_instruments.ipynb
+++ b/img_classification_instruments.ipynb
@@ -38,7 +38,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Matplotlib created a temporary cache directory at /tmp/matplotlib-9pcxr7ey because the default path (/.config/matplotlib) is not a writable directory; it is highly recommended to set the MPLCONFIGDIR environment variable to a writable directory, in particular to speed up the import of Matplotlib and to better support multiprocessing.\n"
+      "Matplotlib created a temporary cache directory at /tmp/matplotlib-lsm7decl because the default path (/.config/matplotlib) is not a writable directory; it is highly recommended to set the MPLCONFIGDIR environment variable to a writable directory, in particular to speed up the import of Matplotlib and to better support multiprocessing.\n"
      ]
     }
    ],
@@ -51,13 +51,11 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "import os\n",
+    "\n",
     "# import shutil\n",
     "# import pathlib\n",
     "# import PIL\n",
     "# from PIL import Image\n",
-    "\n",
-    "\n",
-    "\n",
     "\n",
     "import torch\n",
     "import torchvision\n",
@@ -81,7 +79,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "28f113aa61884158bc213a97640ca41d",
+       "model_id": "46f5d20853ce43d1a8355eea5f698eb9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -327,9 +325,9 @@
     }
    ],
    "source": [
-    "# are tensor values normalized to [-1, 1]?\n",
+    "# check: are tensor values normalized to [-1, 1]?\n",
     "\n",
-    "correct_tensor_range = 0\n",
+    "correct_tensor_range = check: 0\n",
     "\n",
     "for i, image in enumerate(dataset['image']):\n",
     "    if image.min() < -1 or image.max() > 1:\n",
@@ -355,12 +353,12 @@
     }
    ],
    "source": [
-    "# are all tensors shape [3, 32, 32]?\n",
+    "# check: are all tensors shape [3, 32, 32]?\n",
     "\n",
     "correct_tensor_shape = 0\n",
     "\n",
     "for i in range(len(dataset)):\n",
-    "    if dataset[i]['image'].shape != torch.Size([3, 32, 32]):  # replace with expected shape\n",
+    "    if dataset[i]['image'].shape != torch.Size([3, 32, 32]):\n",
     "        print(f\"Image at index {i} has incorrect shape: {image.shape}\")\n",
     "    else:\n",
     "        correct_tensor_shape += 1\n",
@@ -519,7 +517,9 @@
    "cell_type": "code",
    "execution_count": 19,
    "id": "5e0b4194-c2c2-43d8-a996-bb1e73f682bb",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "# start with basic model from the tutorial\n",
@@ -848,7 +848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "id": "9d968470-dafd-4c8a-8989-0d448d1ad7f6",
    "metadata": {},
    "outputs": [],
@@ -866,7 +866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "id": "3fc64611-cc77-4775-ab37-c202d9169f9b",
    "metadata": {},
    "outputs": [],
@@ -888,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 33,
    "id": "c41edae1-0268-4686-a173-bfb100cb0e37",
    "metadata": {},
    "outputs": [
